<resources>
    <string name="app_name">Project UTS</string>
    <string name="title">Laundry.in</string>
    <string name="daftar">Daftar</string>
    <string name="nama">nama</string>
    <string name="alamat">alamat</string>
    <string name="telpon">telepon</string>
    <string name="berat">berat</string>
    <string name="tglOrder">Tgl Order</string>
    <string name="tglAmbil">Tgl Ambil</string>
    <string name="hargaPerkilo">Per kilo = Rp 5000</string>
    <string name="status">Status</string>
    <string name="titleStatus">Riwayat Laundry</string>
    <string name="foto">Foto anda</string>

    <string name="btnSave">Save</string>
    <string name="signin">Sign In</string>
    <string name="signup">Sign Up</string>
    <string name="location">Location</string>

    <string name="addfoto">Add Picture</string>
    <string name="opsional">Opsional</string>
    <string name="laundry">LAUNDRY LOCATION</string>

    <string name="mapbox_access_token">pk.eyJ1IjoiZGltYWtlZGEiLCJhIjoiY2tmbzZpeGczMDVoeTJ0bXFyMmtlaDY0eiJ9.sjR29rBIaYc3tz7QMcKKGA</string>
</resources>